fix weird horizontal scrolling and add icons for build

--- a/finance-manager/main/src/index.css
+++ b/finance-manager/main/src/index.css
@@ -171,15 +171,6 @@ body {
   overflow-x: hidden;
 }
 
-@media screen and (max-width: 900px) {
-  body {
-      overflow-x: scroll;
-  }
-
-}
-
-
-
 /* Add Income page */
 
 
@@ -225,6 +216,7 @@ body {
   border: none;
   width: 512px;
   height: 300px;
+  padding-bottom: 20px;
 }
 
 .addincome-pg input {
@@ -333,6 +325,7 @@ body {
   border: none;
   width: 512px;
   height: 300px;
+  padding-bottom: 20px;
 }
 
 .addexpenses-pg input {
@@ -393,8 +386,7 @@ body {
 
 .dashboard-pg {
   position: relative;
-  margin-left: 15%;
-  left: 35px;
+  left: 60px;
   top: 40px;
 }
 
@@ -404,6 +396,8 @@ body {
   margin-top: 15px;
   width: 600px;
   text-align: left;
+  position: relative;
+  left: 0px;
 }
 
 .dashboard-pg .blocks-container .income-block {
@@ -477,6 +471,7 @@ body {
   border-radius: 8px;
   width: 512px;
   height: 300px;
+  padding-bottom: 20px;
 }
 
 .investments-pg button {
